ingress-adminer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-adminer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: flask-app.local
    http:
      paths:
      - path: /adminer(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
